(executables
 (names lwt_echo_server2 lwt_https_server lwt_get lwt_post two_streams)
 (modules lwt_echo_server2 lwt_https_server lwt_get lwt_post two_streams)
 (libraries h2-lwt-unix lwt.unix))

(executable
 (name lwt_h2c)
 (libraries httpaf-lwt-unix h2-lwt-unix lwt.unix)
 (modules lwt_h2c))

(alias
 (name examples)
 (deps
  (glob_files *.exe)))
